--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,9 +9,41 @@
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet>
+        <servlet-name>DisplayMessage</servlet-name>
+        <servlet-class>ch.hegarc.ig.odi.Bank.displays.servlet.DisplayMessage</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DisplayInformations</servlet-name>
+        <servlet-class>ch.hegarc.ig.odi.Bank.displays.servlet.DisplayInformations</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AskNameToDisplay</servlet-name>
+        <servlet-class>ch.hegarc.ig.odi.Bank.displays.servlet.AskNameToDisplay</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AskNameToStoreToSession</servlet-name>
+        <servlet-class>ch.hegarc.ig.odi.Bank.displays.servlet.AskNameToStoreToSession</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DisplayMessage</servlet-name>
+        <url-pattern>/DisplayMessage</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DisplayInformations</servlet-name>
+        <url-pattern>/DisplayInformations</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AskNameToDisplay</servlet-name>
+        <url-pattern>/AskNameToDisplay</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AskNameToStoreToSession</servlet-name>
+        <url-pattern>/AskNameToStoreToSession</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
